<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.urveshtanna.recipescaavo.data.model.Recipe" />

        <import type="android.view.View" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:text="@{model.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold"
                tools:text="Name" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/description"
                android:visibility="@{model.description != null &amp;&amp; !model.description.isEmpty() ? View.VISIBLE : View.GONE}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2_dp"
                android:text="@{model.description}"
                android:visibility="@{model.description != null &amp;&amp; !model.description.isEmpty() ? View.VISIBLE : View.GONE}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="Description" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                android:visibility="@{model.price != null &amp;&amp; !model.price.isEmpty() ? View.VISIBLE : View.GONE}" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2_dp"
                android:text="@{model.price}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="@{model.price != null &amp;&amp; !model.price.isEmpty() ? View.VISIBLE : View.GONE}"
                tools:text="Price" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                android:visibility="@{model.category != null &amp;&amp; !model.category.isEmpty() ? View.VISIBLE : View.GONE}" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2_dp"
                android:text="@{model.category}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="@{model.category != null &amp;&amp; !model.category.isEmpty() ? View.VISIBLE : View.GONE}"
                tools:text="Category" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                android:visibility="@{model.label != null &amp;&amp; !model.label.isEmpty() ? View.VISIBLE : View.GONE}" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2_dp"
                android:text="@{model.label}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="@{model.label != null &amp;&amp; !model.label.isEmpty() ? View.VISIBLE : View.GONE}"
                tools:text="Label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_to_cart"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_12_dp"
                android:text="@string/got_it"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                app:strokeColor="@color/primaryTextColor" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>